<resources>
    <string name="app_name" translatable="false">Catalogue Movie Ui Ux</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="share">Share</string>
    <string name="detail">Details</string>
    <string name="title_activity_scrollable_tabs" translatable="false">ScrollableTabs</string>
    <string name="up_coming">Up Coming</string>
    <string name="now_playing">Now Playing</string>
    <string name="toprated">Top Rated</string>
    <string name="deskripsi_search">This value contains the users input movie name data to be processed</string>
    <string name="result_search">Search result :</string>
    <string name="search">Search Movie …</string>
    <string name="masukan_judul">Title Entry …</string>
    <string name="gagal">Failed</string>
    <string name="about">About</string>
    <string name="more_app">More Apps</string>
    <string name="pengembang">Developer :</string>
    <string name="arjava" translatable="false">Arjava</string>
    <string name="app_version" translatable="false">Version 1.0</string>
    <string name="email">arjava379@gmail.com</string>
    <string name="nav_title">Movie Ui / Ux Dicoding Academy</string>
    <string name="search_nav">Search Movie</string>
    <string name="app_description">Movie list app.\nThere is a list of the highest ratings, there is a list of upcoming movies, as well as movies being aired.\nIn addition you can also search for movies by entering the title of the movie.</string>
    <string name="exit_msg">Are you sure you want to Quit?</string>
    <string name="change_language">Change Language</string>
    <string name="data_nothing">sorry the data you are looking for is not found</string>
</resources>
