<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:cardElevation="@dimen/dimen_main"
        app:cardCornerRadius="@dimen/dimen_main"
        android:id="@+id/cardNickname"
        android:padding="@dimen/padding_main">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arjava"
            android:padding="@dimen/padding_main"
            android:id="@+id/nickname"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/cardNickname"
        app:cardElevation="@dimen/dimen_main"
        app:cardCornerRadius="@dimen/dimen_main"
        android:id="@+id/cardButton"
        android:layout_margin="@dimen/margin_main"
        android:padding="@dimen/padding_main">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_facebook"
                android:layout_margin="@dimen/margin_main"
                android:background="@drawable/facebook"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_github"
                android:layout_margin="@dimen/margin_main"
                android:background="@drawable/github"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_margin="@dimen/margin_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_linkedin"
                android:background="@drawable/linkedin"
                tools:ignore="ContentDescription" />



       </LinearLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_description"
        android:layout_below="@+id/cardButton"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_margin="@dimen/margin_main"
        android:padding="@dimen/padding_main"
        android:text="@string/app_description"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_description"
        android:background="@color/colorPrimary"/>

    <TextView
        android:id="@+id/app_version"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:paddingBottom="@dimen/padding_main"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/app_version" />

</RelativeLayout>