<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_main"
    android:orientation="vertical"
    android:id="@+id/linearLayoutContentRecycler">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayoutContentMovie"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageViewItemMovie"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayoutItemTextMovie"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:padding="@dimen/padding_main">

            <android.support.v7.widget.CardView
                android:layout_width="150dp"
                android:layout_margin="@dimen/margin_main"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:backgroundTint="@color/dropDownListviewStyle">

                <TextView
                    android:padding="@dimen/padding_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:maxLines="1"
                    android:textAlignment="center"
                    android:id="@+id/textViewItemTitle"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_main"
                android:backgroundTint="@color/dropDownListviewStyle">

            <TextView
                android:padding="@dimen/padding_main"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:id="@+id/textViewItemDesc"
                android:maxLines="3"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_main"
                android:backgroundTint="@color/dropDownListviewStyle">

            <TextView
                android:padding="@dimen/padding_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:maxLines="1"
                android:textAlignment="center"
                android:id="@+id/textViewItemDate"/>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lyoutButton"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnShare"
                android:text="@string/share"
                android:layout_gravity="center_horizontal" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnDetail"
                android:text="@string/detail"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000"
        android:id="@+id/garisBawah"
        android:layout_below="@+id/linearLayoutContentMovie"/>

</LinearLayout>